# accelerated-intelligent-document-processing-on-aws

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.optimized  ENHANCEMENT_SUMMARY.md  Makefile  NOTICE  README.md  SERIALIZATION_FIX.md  VERSION  detail_matches.py  genaiic-idp-accelerator.code-workspace  package-lock.json  package.json  publish.py  publish.sh  pyrightconfig.json  ruff.toml  template.yaml  template.yaml.backup  test_evaluation_enhancements.py  test_evaluation_report.md  test_serialization_fix.py
config_library/: README.md  (+1 more)
idp_cli/: IMPLEMENTATION_SUMMARY.md  pyproject.toml  requirements.txt  setup.py
idp_cli/examples/: load-test-schedule.csv  sample-manifest.json
idp_cli/idp_cli/: batch_processor.py  cleanup_orphaned.py  cli.py  deployer.py  display.py  progress_monitor.py  stack_info.py
idp_cli/tests/: conftest.py  test_batch_processor.py  test_progress_monitor.py  test_rerun_processor.py  test_stack_info.py
lib/idp_common_pkg/: =1.3.0  MANIFEST.in  Makefile  constraints.txt  pyproject.toml  setup.py  verify_stickler.py
lib/idp_common_pkg/idp_common/: README.md  __init__.py  delete_documents.py  models.py
lib/idp_common_pkg/idp_common/agents/: README.md
lib/idp_common_pkg/idp_common/agents/analytics/: agent.py  analytics_logger.py  config.py  schema_provider.py
lib/idp_common_pkg/idp_common/agents/code_intelligence/: __init__.py  agent.py
lib/idp_common_pkg/idp_common/agents/common/: bedrock_error_messages.py  idp_agent.py  strands_bedrock_model.py
lib/idp_common_pkg/idp_common/agents/error_analyzer/: agent.py  config.py
lib/idp_common_pkg/idp_common/agents/external_mcp/: agent.py
lib/idp_common_pkg/idp_common/agents/factory/: agent_factory.py  registry.py
lib/idp_common_pkg/idp_common/agents/orchestrator/: agent.py  config.py
lib/idp_common_pkg/idp_common/agents/testing/: README.md  test_agent_chat_integration.py  test_code_intelligence.py  test_orchestrator_with_subagents.py  test_streaming_events.py
lib/idp_common_pkg/idp_common/agents/utils/: conversation_manager.py  memory_provider.py
lib/idp_common_pkg/idp_common/appsync/: client.py  mutations.py  service.py
lib/idp_common_pkg/idp_common/assessment/: README.md  __init__.py  granular_service.py  service.py
lib/idp_common_pkg/idp_common/bda/: bda_blueprint_creator.py  bda_blueprint_service.py
lib/idp_common_pkg/idp_common/bedrock/: __init__.py  client.py  model_utils.py
lib/idp_common_pkg/idp_common/classification/: service.py
lib/idp_common_pkg/idp_common/config/: __init__.py  configuration_manager.py  constants.py  merge_utils.py  migration.py  models.py  schema_constants.py
lib/idp_common_pkg/idp_common/config/system_defaults/: README.md  __init__.py  base-agents.yaml  base-assessment.yaml  base-classes.yaml  base-classification.yaml  base-criteria-validation.yaml  base-discovery.yaml  base-evaluation.yaml  base-extraction.yaml  base-notes.yaml  base-ocr.yaml  base-summarization.yaml  base.yaml  pattern-1.yaml  pattern-2.yaml  pattern-3.yaml
lib/idp_common_pkg/idp_common/criteria_validation/: service.py
lib/idp_common_pkg/idp_common/discovery/: classes_discovery.py
lib/idp_common_pkg/idp_common/dynamodb/: client.py  service.py
lib/idp_common_pkg/idp_common/evaluation/: README.md  __init__.py  comparator.py  doc_split_classification_metrics.py  llm_comparator.py  models.py  service.py  service_legacy.py  service_stickler.py  stickler_mapper.py  stickler_version.py
lib/idp_common_pkg/idp_common/evaluation/bulk/: README.md
lib/idp_common_pkg/idp_common/extraction/: README.md  agentic_idp.py  service.py
lib/idp_common_pkg/idp_common/image/: __init__.py
lib/idp_common_pkg/idp_common/metrics/: __init__.py
lib/idp_common_pkg/idp_common/model_finetuning/: prepare_nova_finetuning_data.py
lib/idp_common_pkg/idp_common/ocr/: document_converter.py  service.py
lib/idp_common_pkg/idp_common/reporting/: save_reporting_data.py
lib/idp_common_pkg/idp_common/rule_validation/: README.md  __init__.py  models.py  orchestrator.py  service.py
lib/idp_common_pkg/idp_common/s3/: __init__.py
lib/idp_common_pkg/idp_common/schema/: __init__.py  pydantic_generator.py
lib/idp_common_pkg/idp_common/summarization/: service.py
lib/idp_common_pkg/idp_common/utils/: __init__.py  bedrock_utils.py  lambda_metering.py  s3util.py  settings_helper.py
lib/idp_common_pkg/tests/: conftest.py
lib/idp_common_pkg/tests/integration/: test_bedrock_service_tier_integration.py  test_discovery_config_integration.py
lib/idp_common_pkg/tests/resources/: bank_check_idp_schema.json  dl_blueprint_schema_fixed.json  dl_blueprint_schema_normalized_from_aws.json  dl_blueprint_schema_normalized_output.json  dl_blueprint_schema_with_issues.json  payslip_blueprint_schema.json  payslip_idp_schema.json  schema_with_special_chars.json  shift_schedule_idp_schema.json  test_idp_schema_for_transform.json
lib/idp_common_pkg/tests/unit/: test_bedrock_service_tier.py  test_bedrock_utils.py  test_comparison_data_conversion.py  test_default_time_period.py  test_delete_tests.py  test_document_compression.py  test_granular_assessment.py  test_max_pages_classification.py  test_model_utils.py  test_progress_monitor.py  test_publish.py  test_results_resolver.py  test_s3_find_matching_files.py  test_test_comparison.py  test_test_comparison_button.py  test_test_results.py  test_test_results_list.py  test_test_runner_modal.py  test_test_runner_validation.py  test_test_set_file_copier.py  test_test_set_refresh.py  test_test_set_resolver.py  test_time_period_filter.py  test_utils.py  test_zip_extractor.py
lib/idp_sdk/: README.md  pyproject.toml
lib/idp_sdk/examples/: README.md  basic_processing.py  config_operations.py  deploy_lambda_example.py  lambda_function.py  manifest_operations.py  run_all_examples.py  workflow_control.py
lib/idp_sdk/idp_sdk/: __init__.py  client.py  exceptions.py  models.py
lib/idp_sdk/tests/: __init__.py  test_client.py
scripts/sdlc/idp-cli/: Makefile  pyproject.toml
scripts/sdlc/idp-cli/tests/: smoke_test.py
(+592 files in other folders)
