[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = [
  "build",
  "build.*",
  "*build",
  "*build.*",
  "*.build",
  "*.build.*",
  "**build**",
]

[project]
name = "idp_common"
version = "0.4.9"
description = "Common utilities for GenAI IDP Accelerator patterns"
authors = [{ name = "AWS", email = "noreply@amazon.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
  "boto3==1.42.0",      # Core dependency for AWS services
  "jsonschema>=4.25.1",
  "pydantic>=2.12.0",
  "deepdiff>=6.0.0",
]
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

# Optional dependencies for each component
[project.optional-dependencies]
# Core utilities only - minimal dependencies
core = []

# Development only dependencies
dev = [
  "python-dotenv (>=1.1.0,<2.0.0)",
  "ipykernel (>=6.29.5,<7.0.0)",
  "jupyter (>=1.1.1,<2.0.0)",
]

# Image handling dependencies
image = ["Pillow==11.2.1"]

# OCR module dependencies
ocr = [
  "Pillow==11.2.1",
  "PyMuPDF==1.25.5",
  "amazon-textract-textractor[pandas]==1.9.2",
  "numpy==1.26.4",
  "pandas==2.2.3",
  "openpyxl==3.1.5",
  "python-docx==1.2.0",
]

# Classification module dependencies
classification = [
  "Pillow==11.2.1", # For image handling
]

# Extraction module dependencies
extraction = [
  "Pillow==11.2.1",  # For image handling
]

# Assessment module dependencies
assessment = [
  "Pillow==11.2.1",               # For image handling
  "aws-lambda-powertools>=3.2.0", # Structured logging and observability
]

# Evaluation module dependencies
evaluation = [
  "stickler-eval==0.1.3",
  "genson==1.3.0",  # For automatic JSON Schema generation from data
  "munkres>=1.1.4", # For Hungarian algorithm (legacy, may be removed)
  "numpy==1.26.4",  # For numeric operations
]

# Criteria validation module dependencies
criteria_validation = [
  "s3fs==2023.12.2", # For S3 file system operations
]

# Reporting module dependencies
reporting = [
  "pyarrow==20.0.0", # For Parquet conversion
]

# Appsync module dependencies
appsync = ["requests==2.32.4"]

# Agents module dependencies
agents = [
  "strands-agents==1.14.0; python_version>='3.10'",
  "strands-agents-tools==0.2.13; python_version>='3.10'",
  "bedrock-agentcore>=0.1.1; python_version>='3.10'",    # Specifically for the code interpreter tool
]

# Code intelligence module dependencies
code_intel = [
    "requests==2.32.4",
    "strands-agents==1.14.0",
    "strands-agents-tools==0.2.13",
    "bedrock-agentcore>=0.1.1",
    "PyYAML>=6.0.0",
    "pathspec>=0.11.0",
    "chardet>=5.0.0"
]

# Document service factory dependencies (includes both appsync and dynamodb support)
# This includes all dependencies needed for both backends
docs_service = [
  "requests==2.32.4", # Required for appsync module (dynamodb only needs boto3 which is core)
  "aws-xray-sdk>=2.14.0", # Required for X-Ray tracing
]

# Testing dependencies
test = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "pytest-xdist>=3.3.1",            # For parallel test execution
  "requests (>=2.32.3,<3.0.0)",
  "pyarrow==20.0.0",
  "PyYAML==6.0.2",
  "openpyxl==3.1.5",
  "python-docx==1.2.0",
  "moto[s3]==5.1.8",                # For mocking AWS services in tests
  "Pillow==11.2.1",                 # Required for image processing in assessment tests
  "rich>=13.0.0",                   # Required for publish tests
  "idp_common[agentic-extraction]", # Required for agentic_idp tests
  # "s3fs==2023.12.2",  # Required for criteria validation tests - disabled till we fix package dependencies
  "moto>=5.1.8",
  "pytest-asyncio>=1.1.0",
  "typer>=0.19.2",
  "ruff>=0.14.0",
  "deepdiff>=6.0.0",                    # Required for BDA blueprint service tests
  "datamodel-code-generator>=0.25.0",   # Required for schema/pydantic generator tests
  "mypy-boto3-bedrock-runtime>=1.39.0", # Required for bedrock_utils tests
  # Evaluation module dependencies (from evaluation group)
  "stickler-eval==0.1.3",
  "genson==1.3.0",
  "munkres>=1.1.4",
  "numpy==1.26.4",
  "build==1.3.0",
]

# Full package with all dependencies
all = [
  "stickler-eval==0.1.3",
  "genson==1.3.0",
  "Pillow==11.2.1",
  "PyMuPDF==1.25.5",
  "amazon-textract-textractor[pandas]==1.9.2",
  "munkres>=1.1.4",
  "numpy==1.26.4",
  "pandas==2.2.3",
  "requests==2.32.4",
  "pyarrow==20.0.0",
  "openpyxl==3.1.5",
  "python-docx==1.2.0",
  "strands-agents==1.14.0; python_version>='3.10'",
  "strands-agents-tools==0.2.13; python_version>='3.10'",
  "bedrock-agentcore>=0.1.1; python_version>='3.10'",
  # "s3fs==2023.12.2" - - disabled till we fix package dependencies
]
agentic-extraction = [
  "jsonpatch==1.33",
  "strands-agents==1.14.0 ; python_full_version >= '3.10'",
  "pandas>=2.2.3",
  "pymupdf==1.25.5",  # Pinned to 1.25.5 - has pre-built ARM64 wheels, 1.26.x requires compilation
  "email-validator>=2.3.0",
  "tabulate>=0.9.0",
  "aws-lambda-powertools>=3.2.0",                          # Structured logging and observability
  "datamodel-code-generator>=0.25.0",                      # Generate Pydantic models from JSON Schema
  "mypy-boto3-bedrock-runtime>=1.39.0",                    # Type stubs for bedrock_utils.py
]

[project.urls]
"Homepage" = "https://github.com/aws-samples/sample-genai-idp"

[dependency-groups]
