# Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
# SPDX-License-Identifier: MIT-0

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idp-sdk"
version = "0.1.0"
description = "Python SDK for IDP Accelerator - programmatic access to document processing capabilities"
authors = [{name = "AWS"}]
license = {text = "MIT-0"}
requires-python = ">=3.10"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["idp", "document-processing", "aws", "bedrock", "ocr", "extraction"]
dependencies = [
    "boto3>=1.28.0",
    "botocore>=1.31.0",
    "pydantic>=2.0.0",
    "idp_common",  # Core utilities
    "idp-cli",     # CLI components we wrap
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.11.0",
    "moto>=4.2.0",
    "pyyaml>=6.0",
]
lambda = [
    # Minimal dependencies for Lambda deployment
    "boto3>=1.28.0",
    "pydantic>=2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/aws-samples/sample-genai-idp"
"Documentation" = "https://github.com/aws-samples/sample-genai-idp/blob/main/docs/idp-sdk.md"

[tool.setuptools]
packages = ["idp_sdk"]

[tool.setuptools.package-dir]
idp_sdk = "idp_sdk"